Fix elements overlapping css bug

--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,6 @@ input[type="number"]{
 
 .suggestions {
   width: 250px;
-  position: absolute;
   z-index: 2;
   align-self: center;
   margin: 0;
@@ -131,7 +130,6 @@ input[type="number"]{
 }
 
 .Alert {
-  position: fixed;
   top: 20px;
 }
 
